Add a new fcrepo.rebuild property to enable startup indexing. Log deprecation warnings if the old rebuild properties are supplied, but have them both trigger the same behavior as fcrepo.rebuild